2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-mouse.desktop.in.in: renamed Bugzilla product.

2007-03-18  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Andreas Koehler <andi5.py@gmx.net>

	* gnome-mouse-properties.glade: use automatic instead of always
	scrollbar policy for the mouse pointer tab (fixes #345884)

2007-03-05  Jens Granseuer  <jensgr@gmx.net>

	* gnome-mouse-properties.c: (populate_tree_model), (setup_dialog): fix
	build with gcc 2, and move setting the sort column somewhere sensible

2007-03-04  Thomas Wood  <thos@gnome.org>

	Patch by: Thomas Zajic <zlatko@gmx.at>

	* gnome-mouse-properties.c: (populate_tree_model): Add two popular cursor
	sizes to the filter, and sort "Pointers" list alphabetically.

2007-02-09  Jens Granseuer  <jensgr@gmx.net>

	* gnome-mouse-properties.c: (create_dialog), (main): remove some dead
	code, and don't crash if the glade file is not available

2007-01-17  Jens Granseuer <jensgr@gmx.net>

	Fixes #395539

	* gnome-mouse-properties.c (read_cursor_font, populate_tree_model,
	setup_dialog, dialog_response_cb, main): fixed memory leaks.

2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>

	Fixes #336286

	* gnome-mouse-properties.c (main): switched from popt to GOptionContext.

2006-10-16  Rodrigo Moya <rodrigo@novell.com>

	Fixes #163690

	* gnome-mouse-properties.glade: reordered the widgets for A11Y. Patch
	from Sven Herzberg  <herzi@gnome-de.org>.

2006-08-16  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: also display the default theme (though
	without a preview for technical reasons); fixes bug #322514

2006-07-24  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: use ngettext() correctly

2006-07-24  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: fix the non-xcursor case for solaris;
	closes: #319125 (based upon patch from Glynn Foster)

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-mouse.desktop.in.in: