@@ -629,40 +629,12 @@
 			      </child>
 
 			      <child>
-				<widget class="GtkOptionMenu" id="cursor_size_omenu">
+				<widget class="GtkComboBox" id="cursor_size_omenu">
 				  <property name="visible">True</property>
 				  <property name="can_focus">True</property>
-				  <property name="history">0</property>
-
-				  <child internal-child="menu">
-				    <widget class="GtkMenu" id="convertwidget1">
-				      <property name="visible">True</property>
-
-				      <child>
-					<widget class="GtkMenuItem" id="convertwidget2">
-					  <property name="visible">True</property>
-					  <property name="label" translatable="yes">Small</property>
-					  <property name="use_underline">True</property>
-					</widget>
-				      </child>
-
-				      <child>
-					<widget class="GtkMenuItem" id="convertwidget3">
-					  <property name="visible">True</property>
-					  <property name="label" translatable="yes">Medium</property>
-					  <property name="use_underline">True</property>
-					</widget>
-				      </child>
-
-				      <child>
-					<widget class="GtkMenuItem" id="convertwidget4">
-					  <property name="visible">True</property>
-					  <property name="label" translatable="yes">Large</property>
-					  <property name="use_underline">True</property>
-					</widget>
-				      </child>
-				    </widget>
-				  </child>
+				  <property name="items" translatable="yes">Small
+Medium
+Large</property>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
