@@ -1,3 +1,10 @@
+2007-05-08  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-mouse-properties.c: (cursor_size_from_widget),
+	(setup_dialog):
+	* gnome-mouse-properties.glade: port from deprecated GtkOptionMenu to
+	GtkComboBox
+
 2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gnome-settings-mouse.desktop.in.in: renamed Bugzilla product.
